--- a/webapps/j2ee/WEB-INF/web.xml
+++ b/webapps/j2ee/WEB-INF/web.xml
@@ -3,6 +3,14 @@
     <servlet>
         <servlet-name>HelloServlet</servlet-name>
         <servlet-class>cn.kayleh.diyTomcat.webappservlet.HelloServlet</servlet-class>
+        <init-param>
+            <param-name>author</param-name>
+            <param-value>Kayleh(servlet)</param-value>
+        </init-param>
+        <init-param>
+            <param-name>site</param-name>
+            <param-value>http://Kayleh.cn(servlet)</param-value>
+        </init-param>
     </servlet>
 
     <servlet-mapping>
